<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_show_product1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_1"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_show_product2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_2"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_show_product3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_3"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_show_product4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_4"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_show_product5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_5"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_show_product6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_6"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_show_product7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_7"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_show_product8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_8"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_show_product9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/product_9"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_show_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Usuario"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_show_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="Ingrese su usuario"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Correo"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_show_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="Ingrese su correo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enviar"/>

    </LinearLayout>


</LinearLayout>